--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "uuidv4": "^6.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
